<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:rowCount="5"
    android:columnCount="5">

    <EditText
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_columnSpan="5"
        android:inputType="number" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/_1" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="74dp"
        android:layout_row="1"
        android:layout_column="1"
        android:text="@string/_2" />

    <Button
        android:layout_width="77dp"
        android:layout_row="1"
        android:layout_column="2"
        android:id="@+id/btn3"
        android:text="@string/_3" />

    <Button
        android:id="@+id/add"
        android:layout_width="75dp"
        android:layout_row="1"
        android:layout_column="3"
        android:text="@string/addition" />

    <Button
        android:layout_width="70dp"
        android:layout_height="190dp"
        android:layout_row="1"
        android:layout_rowSpan="4"
        android:layout_column="4"
        android:id="@+id/eq"
        android:text="@string/equal" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="73dp"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/_4" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="72dp"
        android:layout_row="2"
        android:layout_column="1"
        android:text="@string/_5" />

    <Button
        android:layout_width="77dp"
        android:layout_row="2"
        android:layout_column="2"
        android:id="@+id/btn6"
        android:text="@string/_6" />

    <Button
        android:id="@+id/sub"
        android:layout_width="72dp"
        android:layout_row="2"
        android:layout_column="3"
        android:text="@string/subtraction" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="74dp"
        android:layout_row="3"
        android:layout_column="0"
        android:text="@string/_7" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="73dp"
        android:layout_row="3"
        android:layout_column="1"
        android:text="@string/_8" />

    <Button
        android:layout_width="74dp"
        android:layout_row="3"
        android:layout_column="2"
        android:id="@+id/btn9"
        android:text="@string/_9" />

    <Button
        android:id="@+id/mul"
        android:layout_width="73dp"
        android:layout_row="3"
        android:layout_column="3"
        android:text="@string/multiplication" />

    <Button
        android:id="@+id/dot"
        android:layout_width="72dp"
        android:layout_row="4"
        android:layout_column="0"
        android:text="@string/decimal" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="72dp"
        android:layout_row="4"
        android:layout_column="1"
        android:text="@string/_0" />

    <Button
        android:layout_width="74dp"
        android:layout_row="4"
        android:layout_column="2"
        android:id="@+id/back"
        android:text="@string/back_symbol" />

    <Button
        android:id="@+id/div"
        android:layout_width="74dp"
        android:layout_row="4"
        android:layout_column="3"
        android:text="@string/divide" />
</GridLayout>